--- a/locales/ko/terms.json
+++ b/locales/ko/terms.json
@@ -1,4 +1,7 @@
-[
+{
+  "data" :{
+    "page_title": "이용 약관",
+  "contents" :[
   {
     "title" : "제1조 (목적)",
     "content" : "이 약관(이하 '본 약관')은 하루한글(이하 '당사')이 제공하는 앱 서비스(이하 '서비스')를 이용하는 고객(이하 '고객')과 당사 간의 권리, 의무 및 책임사항을 규정하는 것을 목적으로 합니다."
@@ -103,4 +106,6 @@
     "title" : "부칙",
     "content" : "본 약관은 2024년 10월 23일부터 적용됩니다."
   }
-]
+  ]
+}
+}
