--- a/locales/ko/privacy.json
+++ b/locales/ko/privacy.json
@@ -1,4 +1,8 @@
-[
+{
+  "data" :
+  {
+  "page_title": "개인정보 처리 방침",
+  "contents" :[
   {
   "content" : "하루한글(이하 '회사'라 함)은 개인정보 보호법에 따라 사용자(이하 '이용자')의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같은 개인정보 처리방침을 수립·공개합니다."
   },
@@ -64,4 +68,5 @@
     "title" : "9. 권익침해 구제 방법",
     "content" : "정보주체는 개인정보 침해로 인한 피해 구제를 받기 위하여 개인정보 분쟁조정위원회, 개인정보 침해신고센터 등에 분쟁해결이나 상담을 신청할 수 있습니다."
   }
-]
+]}
+}
