terms & privacy top bar to translate

--- a/locales/zh/privacy.json
+++ b/locales/zh/privacy.json
@@ -1,7 +1,7 @@
 {
   "data": {
-  "page_title": "个人信息处理方针",
-  "privacy" : [
+    "page_title": "个人信息处理方针",
+    "contents" : [
   {
     "content": "하루한글（以下简称“公司”）根据《个人信息保护法》保护用户（以下简称“用户”）的个人信息，并为快速、顺畅地处理相关投诉，制定并公开以下个人信息处理方针。"
   },
@@ -68,5 +68,6 @@
     "title": "9. 权益侵害救济方法",
     "content": "信息主体可向个人信息争议调解委员会、个人信息侵害举报中心等机构申请争议解决或咨询，以获得因个人信息侵害造成的损害救济。"
   }
-  ]}
+  ]
+}
 }
