--- a/locales/zh/terms.json
+++ b/locales/zh/terms.json
@@ -1,7 +1,7 @@
 {
   "data": {
   "page_title" : "使用条款",
-  "terms" : [
+  "contents" : [
   {
     "title": "第1条（目的）",
     "content": "本协议（以下简称“本协议”）旨在规范 하루한글（以下简称“公司”）提供的应用程序服务（以下简称“服务”）的使用客户（以下简称“客户”）与公司之间的权利、义务和责任。"
